# qsdsan-engine-mcp

./: .dockerignore  .env.example  .gitignore  API_REFERENCE.md  CLAUDE.md  Dockerfile  LICENSE  LICENSE.txt  NOTES_FOR_SKILLS.md  README.md  USER_GUIDE.md  cli.py  deploy-gcp.ps1  docker-compose.vm.yaml  docker-compose.yaml  pyproject.toml  requirements-cloud.txt  requirements.txt  server.py  server_rest.py
.claude/: codex-loop.local.md
cloud/: QSDsan cloud deployment Guide.md  __init__.py  config.py  gcs_backend.py  storage.py
core/: __init__.py  converters.py  junction_components.py  junction_units.py  kinetic_params.py  model_registry.py  plant_state.py  template_registry.py  unit_registry.py  version.py
docs/: CLOUD_DEPLOYMENT.md  GCP_VM_MULTI_SERVICE_DEPLOYMENT.md  anaerobic-cstr-madm1-parameters.md
docs/completed-plans/: bright-snacking-prism.md  idempotent-napping-hoare.md  phase-ai-1-analyzing-the-results.md  phase-env-1-cloud-deployment-integration.md  phase-n8n-1-dynamic-json-input.md  phase-n8n-2-implementation-summary.md  phase-n8n-2-supabase-folder-structure.md  phase-n8n-3-study-configuration-management.md  phase10-known-limitations-plan.md  phase10-known-limitations.md  phase11-improvements.md  phase12-srt-controlled-simulation.md  phase12b-srt-control-feature-parity.md  phase13-anaerobic-skill-refactor.md  phase2b-bug-fixes.md  phase3-llm-accessibility.md  phase4-production-readiness.md  phase5-report-integration.md  phase6-production-hardening.md  phase7-production-hardening.md  phase7b-bug-fixes.md  phase7c-ch4-calculation-fix.md  phase8-mle-tea-nitrification.md  (+3 more)
models/: __init__.py  asm2d.py  components.py  madm1.py  reactors.py  sulfur_kinetics.py  thermodynamics.py
reports/: __init__.py  qmd_builder.py
templates/: __init__.py
tests/: run_slow_tests.py  test_asm2d_state.json  test_cloud_config.py  test_convergence.py  test_convergence_integration.py  test_converters.py  test_flowsheet_mixer_splitter.py  test_integration.py  test_job_manager.py  test_madm1_state.json  test_mcp_contracts.py  test_mixed_model.py  test_nitrification.py  test_phase1.py  test_phase10.py  test_phase2.py  test_phase3.py  test_security.py  test_srt_control.py  test_validation_cli.py
utils/: __init__.py  aerobic_inoculum_generator.py  convergence.py  diagram.py  flowsheet_builder.py  flowsheet_session.py  inoculum_generator.py  job_manager.py  path_utils.py  pipe_parser.py  qsdsan_loader.py  report_plots.py  run_to_convergence.py  run_to_srt.py  simulate_madm1.py  srt_control.py  stream_analysis.py  tea_wrapper.py  topo_sort.py
(+28 files in other folders)
