[project]
name = "qsdsan-engine-mcp"
version = "0.1.0"
description = "Universal QSDsan simulation engine with MCP and CLI adapters"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "qsdsan>=1.3.0",
    "biosteam>=2.38",
    "pydantic>=2.0",
    "fastmcp>=0.5",
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
cli = ["typer>=0.9", "rich>=13.0"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[project.scripts]
qsdsan-engine = "cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "templates", "utils", "models", "reports"]
