[project]
name = "qsdsan-engine-mcp"
version = "3.0.6"
description = "Universal QSDsan simulation engine with MCP and CLI adapters"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "qsdsan>=1.3.0",
    "biosteam>=2.38",
    "pydantic>=2.0",
    "fastmcp>=0.5",
    "numpy>=1.24",
    "scipy>=1.10",
    # CLI dependencies (always needed since CLI is primary interface)
    "typer>=0.9",
    "rich>=13.0",
    # Report generation dependencies
    "jinja2>=3.0",
    "matplotlib>=3.7",
    # Job manager dependency
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[project.scripts]
qsdsan-engine = "cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "templates", "utils", "models", "reports"]
include = [
    "cli.py",
    "server.py",
]

[tool.hatch.build.targets.wheel.force-include]
"reports/templates" = "reports/templates"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
asyncio_mode = "strict"
filterwarnings = [
    # Note: We don't use "error" because QSDsan/BioSTEAM/scipy emit many deprecation
    # warnings from their own code that we can't fix. The test hygiene goal of
    # "no warning-passes" is achieved by proper assertions in tests, not by
    # converting all upstream warnings to errors.
    "default",
    # Optionally suppress noise from upstream dependencies during tests
    "ignore::DeprecationWarning:scipy",
    "ignore::DeprecationWarning:pint",
    "ignore::DeprecationWarning:pkg_resources",
    "ignore::DeprecationWarning:biosteam",
    "ignore::DeprecationWarning:chaospy",
]
